<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_divider"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/nav_dark_mode"
        android:title="@string/dark_mode"
        android:icon="@drawable/ic_dark_mode"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favorites" />

    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/language" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:menuCategory="secondary" />

</menu>