<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/text_secondary"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="100dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/filtration"
                    android:textColor="@color/text_primary"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/tv_category"
                    style="@style/LabelsTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/category" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/jewelry"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/decoration"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/clothes"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/gifts"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/prints"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/accessories"
                        app:checkedIconEnabled="false" />
                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/tv_craftsman"
                    style="@style/LabelsTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text_primary"
                    android:text="@string/craftsman_name" />

                <EditText
                    android:id="@+id/et_craftsman"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/filter_input_bg"
                    android:fontFamily="@font/inter_regular"
                    android:textColorHint="@color/text_secondary"
                    android:hint="@string/enter_the_craftsman_name"
                    android:padding="10dp"
                    android:textColor="@color/text_primary" />

                <TextView
                    android:id="@+id/tv_size"
                    style="@style/LabelsTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/size" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/small"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/medium"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/large"
                        app:checkedIconEnabled="false" />
                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/tv_material"
                    style="@style/LabelsTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/material" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/plastic"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/wood"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/glass"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/wool"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/pearls"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/cloth"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/pottery"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/metal"
                        app:checkedIconEnabled="false" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.App.Chip"
                        android:text="@string/beads"
                        app:checkedIconEnabled="false" />
                </com.google.android.material.chip.ChipGroup>
                <LinearLayout
                    android:id="@+id/bottom_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:padding="20dp"
                    android:background="@color/background_white"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <Button
                        android:id="@+id/btn_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"
                        style="@style/CustomButton"
                        android:text="@string/search" />

                    <Button
                        android:id="@+id/btn_reset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/CustomButton"
                        android:text="@string/reset" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
