<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_account"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        app:layout_constraintTop_toBottomOf="@id/edit_account" />

    <TextView
        android:id="@+id/password_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_manager"
        app:layout_constraintTop_toBottomOf="@id/notifications_switch" />

    <TextView
        android:id="@+id/blocked_accounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blocked_accounts"
        app:layout_constraintTop_toBottomOf="@id/password_manager" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/blocked_accounts" />

</androidx.constraintlayout.widget.ConstraintLayout>